fixed the save and continue overlapping issue

--- a/app/styles/campaign_create.less
+++ b/app/styles/campaign_create.less
@@ -3679,6 +3679,11 @@
             width: 930px;
         }
     }
+    .ad-create-panes {
+        .tab-pane {
+            padding-bottom: 65px !important;
+        }
+    }
     // Campaign Create Ad POP Ends Here
 
     .platformSlide {
